Change log
==========

1.8 (unreleased)
----------------


1.7 (2010-08-03)
----------------
- Feature: If no standard package documentation can be found, 
  the setuptools ``long_description`` settings is used as a 
  last fallback to at least generate a single page for a package.

- Feature: To style the ``long_description`` fallback ReST 
  documentation, a new parameter ``fallback-css`` can be used to 
  provide a path to a CSS file.


1.6 (2010-07-31)
----------------
- Bug: If the ``z3csphinx-output-directory`` was set, all its 
  contained packages ended up on the index document. Now this 
  only happens if no SVN source URLs are otherwise provided.
  If they are, only packages from those source URLs are 
  considered for linking on the index document.


1.5 (2010-07-31)
----------------
- Feature: If you generate some documentation via 
  `z3c.recipe.sphinxdoc` and want to stitch links to it 
  into the generated index file, you can use the new 
  ``z3csphinx-output-directory`` parameter to point the script 
  to the generated package documentation root folder.


1.4 (2010-07-31)
----------------
- Bug: Don't clean up intermediate files, otherwise it is not 
  possible to re-use a template folder for creating several
  separate pages into an output folder.

- Bug: Clean up group header creation to avoid header level
  mixups.

- Bug: When creating a missing required index.rst, use a 
  template file if it exists.


1.3 (2010-07-30)
----------------
- Feature: Added a script and buildout option ``index-name`` to 
  specify the file name (without extension) for the index page.
  With this option you can safely build the index page into an 
  existing `Sphinx` documentation folder without overwriting 
  or changing the existing ``index.rst`` file and its HTML 
  equivalent. The default continues to be ``index.rst``, though.

- Feature removed: It is no longer possible to create a simple HTML
  index page without using `Sphinx` and a minimal `Sphinx` 