@@ -13,21 +13,30 @@ Glossary
   Interface
     An attribute of a model object that determines its type.  It is an
     instance of a ``zope.interface`` Interface class.
+
   Virtualenv
     An isolated Python environment.  Allows you to control which
     packages are used on a particular project by cloning your main
     Python.  `virtualenv <http://pypi.python.org/pypi/virtualenv>`_
     was created by Ian Bicking.
+
   Setuptools
     `Setuptools <http://peak.telecommunity.com/DevCenter/setuptools>`_
     builds on Python's ``distutils`` to provide easier building,
     distribution, and installation of packages.
+
   Subversion
     `Subversion <http://subversion.apache.org/>`_ is a software version 
     control system.
+
+  Mercurial
+    `Mercurial <http://mercurial.selenic.com/>`_ is a distributed 
+    software version control system.
+
   zc.buildout
     `zc.buildout <http://buildout.org>`_ is a Python-based build system 
     for creating, assembling and deploying applications.
+
   Zope
     `The Z Object Publishing Framework <http://zope.org>`_.  The granddaddy 
     of Python web frameworks.
